--- a/postgres/my-postgres.conf
+++ b/postgres/my-postgres.conf
@@ -457,7 +457,7 @@ max_connections = 2000			# (change requires restart)
 #log_temp_files = -1			# log temporary files equal or larger
 					# than the specified size in kilobytes;
 					# -1 disables, 0 logs all temp files
-#log_timezone = 'GMT'
+log_timezone = 'Asia/Shanghai'
 
 
 # - Process Title -
@@ -553,7 +553,7 @@ max_connections = 2000			# (change requires restart)
 
 #datestyle = 'iso, mdy'
 #intervalstyle = 'postgres'
-#timezone = 'GMT'
+timezone = 'Asia/Shanghai'
 #timezone_abbreviations = 'Default'     # Select the set of available time zone
 					# abbreviations.  Currently, there are
 					#   Default
