feat: update consul

--- a/consul/docker-compose.yml
+++ b/consul/docker-compose.yml
@@ -2,12 +2,24 @@ version: "3.3"
 
 services:
   consul:
-    image: consul:1.2.2
+    image: consul:1.2.3
     hostname: "consul"
+    environment:
+      - CONSUL_BIND_INTERFACE=eth0
     ports:
       - "8500:8500"
     volumes:
       - "./config.json:/consul/config/consul.json"
       - "./data:/consul/data"
     command: ["agent"]
+    restart: "always"
+  ui:
+    image: jippi/hashi-ui:v0.26.1
+    depends_on:
+      - consul
+    environment:
+      - CONSUL_ENABLE=true
+      - CONSUL_ADDR=consul:8500
+    ports:
+      - "8501:3000"
     restart: "always"
