--- a/mysql/mysql.cnf
+++ b/mysql/mysql.cnf
@@ -1,8 +1,12 @@
 [mysqld]
-server-id         = 123456
-expire_logs_days  = 7
-binlog_format     = row
-general_log       = 1
-general_log_file  = /var/lib/mysql/general.log
-default-time_zone = '+8:00'
-sql_mode          = 'STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION,NO_ZERO_DATE,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER'
+server-id            = 123456
+expire_logs_days     = 7
+binlog_format        = row
+general_log          = 1
+character-set-server = utf8mb4
+general_log_file     = /var/lib/mysql/general.log
+default-time_zone    = '+8:00'
+sql_mode             = 'STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION,NO_ZERO_DATE,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER'
+
+[mysql]
+default-character-set = utf8mb4
