--- a/filebrowser/docker-compose.yml
+++ b/filebrowser/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
   filebrowser:
-    image: filebrowser/filebrowser:latest
+    image: filebrowser/filebrowser:v2.0.3
     ports:
       - "1880:80"
     volumes:
