--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -2,11 +2,11 @@ version: "3.3"
 
 services:
   redis:
-    image: redis:4.0.6
+    image: redis:5.0.8
     ports:
-      - "16379:6379"
+      - 16379:6379
     volumes:
-      - "./redis.conf:/redis/config/redis.conf"
-      - "./data:/redis/data"
-    command: ["/redis/config/redis.conf"]
-    restart: "always"
+      - ./data:/data
+    command:
+      - --requirepass KgqvdOdYV5
+    restart: always
