upgrade mongo to v4.2.6

--- a/mongo/docker-compose.yml
+++ b/mongo/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
   mongo:
-    image: mongo:3.6.6
+    image: mongo:4.2.6
     environment:
       MONGO_INITDB_ROOT_USERNAME: "mongo"
       MONGO_INITDB_ROOT_PASSWORD: "EakEFk9uGh"
@@ -13,7 +13,7 @@ services:
       - "./data:/data/db"
     restart: "always"
   express:
-    image: mongo-express:0.45.0
+    image: mongo-express:latest
     environment:
       ME_CONFIG_BASICAUTH_USERNAME: "express"
       ME_CONFIG_BASICAUTH_PASSWORD: "MWUNG9gnY7"
